fix logout btn size, esp. on iphone

--- a/todo-rist/src/app/todo-list/todo-list.component.css
+++ b/todo-rist/src/app/todo-list/todo-list.component.css
@@ -122,7 +122,7 @@
 @media (max-width: 576px) {
   /* Responsive adjustments for smaller screens */
   .fixed-width-btn {
-    width: 80px; /* Adjust width for smaller screens */
+    width: 50px; /* Adjust width for smaller screens */
   }
 
   .card-icons i {
